some refactor and add %

--- a/youtuberequester/pom.xml
+++ b/youtuberequester/pom.xml
@@ -20,8 +20,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
-			<scope>test</scope>
+			<version>4.12</version>
 		</dependency>
 
 		<dependency>
@@ -64,6 +63,11 @@
 			<version>2.0.2-beta</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity-tools</artifactId>
+			<version>2.0</version>
+		</dependency>
 
 	</dependencies>
 
